compiler/testData/diagnostics/tests/shadowing/ShadowVariableInNestedClosure.jet
fun f(): Int {
    var i = 17
    <!UNUSED_FUNCTION_LITERAL!>{ (): Unit -> var <!NAME_SHADOWING!>i<!> = 18 }<!>
    return i
}